--- a/src/app/home/operation/credit-note/credit-note.component.html
+++ b/src/app/home/operation/credit-note/credit-note.component.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 offset-md-2 mt-4">
-                        <button disabled class="form-btn w-100">Create Credit Note</button>
+                        <button class="form-btn w-100" (click)="createCreditNote()">Create Credit Note</button>
                     </div>
                 </div>
             </div>
